--- a/MyBirthday/style.css
+++ b/MyBirthday/style.css
@@ -1,15 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 body {
-    background-image: -webkit-gradient(
-        radial,
-        50% 50%,
-        0,
-        50% 50%,
-        100,
-        color-stop(0%, #374566),
-        color-stop(100%, #010203)
-    );
+    background-image: url(./main.JPG);
     background-image: -webkit-radial-gradient(#374566, #010203);
     background-image: -moz-radial-gradient(#374566, #010203);
     background-image: -o-radial-gradient(#374566, #010203);
