--- a/MyBirthday/style.css
+++ b/MyBirthday/style.css
@@ -419,12 +419,12 @@ h1 {
 }
 
 .swal-text {
-    font-size: 100px;
+    font-size: 150px;
     font-weight: 250;
     word-spacing: 5px;
 }
 .swal2-popup {
-    font-size: 5em !important;
+    font-size: 200px !important;
 }
 
 /* Hiệu ứng pháo hoa*/
