--- a/MyBirthday/style.css
+++ b/MyBirthday/style.css
@@ -424,7 +424,7 @@ h1 {
     word-spacing: 5px;
 }
 .swal-html-container {
-    font-size: 50px;
+    font-size: 100px !important;
 }
 
 /* Hiệu ứng pháo hoa*/
