--- a/MyBirthday/style.css
+++ b/MyBirthday/style.css
@@ -423,8 +423,8 @@ h1 {
     font-weight: 250;
     word-spacing: 5px;
 }
-.swal-html-container {
-    font-size: 100px !important;
+.swal2-html-container {
+    font-size: 80px !important;
 }
 
 /* Hiệu ứng pháo hoa*/
