--- a/MyBirthday/style.css
+++ b/MyBirthday/style.css
@@ -2,21 +2,10 @@
 
 
 body {
-    
+    background-image: url(./main.JPG);
     background-size: 100%;
     background-repeat: no-repeat;
     font-family: 'Lobster', cursive;
-}
-#background-video {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
 }
 span {
     text-transform: uppercase;
